--- a/_includes/parts/intro-post.html
+++ b/_includes/parts/intro-post.html
@@ -1,9 +1,10 @@
-<section class="intro-page">
-    <div class="intro-page-img">
-        <img src="/assets/img/blog.jpg" alt="Ilustração do banner sobre {{ page.title }}" />
+<section class="intro-post">
+    <div class="intro-post-img">
+        <img src="/assets/img/{{ page.image }}" alt="Ilustração do banner sobre {{ page.title }}" />
     </div>
-    <div class="intro-page-inner center">
-        <h1 class="intro-page-title">{{ page.title }}</h1>
-        <p class="intro-page-description">{{ page.intro }}</p>
+    <div class="intro-style"></div>
+    <div class="intro-post-inner center">
+        <h1 class="intro-post-title">{{ page.title }}</h1>
+        <p class="intro-post-description">{{ page.subtitle }}</p>
     </div>
 </section>
