--- a/_src/styl/style.styl
+++ b/_src/styl/style.styl
@@ -33,6 +33,8 @@
 @import "/parts/_intro-home-mob"
 @import "/parts/intro-page"
 @import "/parts/_intro-page-mob"
+@import "/parts/intro-post"
+@import "/parts/_intro-post-mob"
 @import "/parts/cards"
 @import "/parts/_cards-mob"
 @import "/parts/slice"
