--- a/_src/styl/globals/post.styl
+++ b/_src/styl/globals/post.styl
@@ -1,31 +1,43 @@
 .post
-    .main
-        margin 35px 0
-        .post-content
-            lost-utility clearfix
-            .part
-                .part-content
+    .content
+        margin-bottom 10px
+        .content-inner
+            padding 20px
+            .page-content
+                lost-utility clearfix
+                .sidebar
+                    lost-column 4/14 2
+                .main
+                    lost-column 10/14 2
                     overflow: hidden
-                    padding 15px
-                    margin-bottom 25px
-                    .part-tags
-                        display inline-block
-                        color white
-                        text-transform: uppercase
-                        font-size: 14px
-                        font-weight: bold
-                        padding: 2px 10px
-                        border-radius 10px
-                        background: cinza - 80%
-                    .part-title
-                        margin 0
-                        color colors
-                        font-size: 48px
-                        font-weight: bold
-                        text-transform: uppercase
-                    .part-date
-                        display block
-                        margin 10px 0 25px
-                        padding 7px 0
-                        border-top 1px solid cinza - 20%
-                        border-bottom 1px solid cinza - 20%
+                    background: white
+                    padding: 30px 20px 20px 50px
+                    box-shadow 0 0 1px 0 rgba(colors, .5)
+                    margin-bottom 20px
+                    .part-header
+                        .part-title
+                            text-align: left
+                            margin 0 0 15px
+                            padding-bottom: 15px
+                            border-bottom 2px solid colorp
+                            i.fa
+                                color colorp
+                                margin-right: 5px
+                        .part-img
+                            position: relative
+                            overflow: hidden
+                            width 100%
+                            height 300px
+                            margin-bottom: 15px
+                            img
+                                width 100%
+                                height auto
+                    .part-content
+                        overflow: hidden
+                        background: white
+                        lost-utility clearfix
+                        li
+                            padding-left: 1em 
+                            text-indent: -.7em
+                            p::before
+                              content: "• "
