--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,46 +197,102 @@ h4,
 h5 {
   margin-bottom: 0;
 }
-.post .main {
-  margin: 35px 0;
+.post .content {
+  margin-bottom: 10px;
 }
-.post .main .post-content:before {
+.post .content .content-inner {
+  padding: 20px;
+}
+.post .content .content-inner .page-content:before {
   content: '';
   display: table;
 }
-.post .main .post-content:after {
+.post .content .content-inner .page-content:after {
   content: '';
   display: table;
   clear: both;
 }
-.post .main .post-content .part .part-content {
+.post .content .content-inner .page-content .sidebar {
+  width: calc(99.9% * 4/14 - (20px - 20px * 4/14));
+}
+.post .content .content-inner .page-content .sidebar:nth-child(1n) {
+  float: left;
+  margin-right: 20px;
+  clear: none;
+}
+.post .content .content-inner .page-content .sidebar:last-child {
+  margin-right: 0;
+}
+.post .content .content-inner .page-content .sidebar:nth-child(2n) {
+  margin-right: 0;
+  float: right;
+}
+.post .content .content-inner .page-content .sidebar:nth-child(2n + 1) {
+  clear: both;
+}
+.post .content .content-inner .page-content .main {
+  width: calc(99.9% * 10/14 - (20px - 20px * 10/14));
   overflow: hidden;
-  padding: 15px;
-  margin-bottom: 25px;
+  background: #fff;
+  padding: 30px 20px 20px 50px;
+  box-shadow: 0 0 1px 0 rgba(3,61,105,0.5);
+  margin-bottom: 20px;
 }
-.post .main .post-content .part .part-content .part-tags {
-  display: inline-block;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 2px 10px;
-  border-radius: 10px;
-  background: #303030;
+.post .content .content-inner .page-content .main:nth-child(1n) {
+  float: left;
+  margin-right: 20px;
+  clear: none;
 }
-.post .main .post-content .part .part-content .part-title {
-  margin: 0;
-  color: #033d69;
-  font-size: 48px;
-  font-weight: bold;
-  text-transform: uppercase;
+.post .content .content-inner .page-content .main:last-child {
+  margin-right: 0;
 }
-.post .main .post-content .part .part-content .part-date {
-  display: block;
-  margin: 10px 0 25px;
-  padding: 7px 0;
-  border-top: 1px solid #bfbfbf;
-  border-bottom: 1px solid #bfbfbf;
+.post .content .content-inner .page-content .main:nth-child(2n) {
+  margin-right: 0;
+  float: right;
+}
+.post .content .content-inner .page-content .main:nth-child(2n + 1) {
+  clear: both;
+}
+.post .content .content-inner .page-content .main .part-header .part-title {
+  text-align: left;
+  margin: 0 0 15px;
+  padding-bottom: 15px;
+  border-bottom: 2px solid #cdd000;
+}
+.post .content .content-inner .page-content .main .part-header .part-title i.fa {
+  color: #cdd000;
+  margin-right: 5px;
+}
+.post .content .content-inner .page-content .main .part-header .part-img {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 300px;
+  margin-bottom: 15px;
+}
+.post .content .content-inner .page-content .main .part-header .part-img img {
+  width: 100%;
+  height: auto;
+}
+.post .content .content-inner .page-content .main .part-content {
+  overflow: hidden;
+  background: #fff;
+}
+.post .content .content-inner .page-content .main .part-content:before {
+  content: '';
+  display: table;
+}
+.post .content .content-inner .page-content .main .part-content:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.post .content .content-inner .page-content .main .part-content li {
+  padding-left: 1em;
+  text-indent: -0.7em;
+}
+.post .content .content-inner .page-content .main .part-content li p::before {
+  content: "• ";
 }
 .home .main {
   position: relative;
@@ -897,119 +953,118 @@ h5 {
 .page.error404 .content .content-inner .page-content .main .btn {
   margin-top: 20px;
 }
-.page.blog .page-content .part {
-  position: relative;
-  overflow: hidden;
-  width: calc(99.9% * 1/3 - (20px - 20px * 1/3));
-  height: 378px;
-  padding: 0;
-  border: 14px solid #fff;
-  box-shadow: 0 0 1px 0 rgba(3,61,105,0.5);
-  text-align: center;
-  border-radius: 6px;
+.page.blog .content .content-inner .page-content .main {
+  display: block;
+  padding-left: 20px;
 }
-.page.blog .page-content .part:nth-child(1n) {
+.page.blog .content .content-inner .page-content .main:before {
+  content: '';
+  display: table;
+}
+.page.blog .content .content-inner .page-content .main:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+.page.blog .content .content-inner .page-content .main .part {
+  width: calc(99.9% * 1/2 - (20px - 20px * 1/2));
+}
+.page.blog .content .content-inner .page-content .main .part:nth-child(1n) {
   float: left;
   margin-right: 20px;
   clear: none;
 }
-.page.blog .page-content .part:last-child {
+.page.blog .content .content-inner .page-content .main .part:last-child {
   margin-right: 0;
 }
-.page.blog .page-content .part:nth-child(3n) {
+.page.blog .content .content-inner .page-content .main .part:nth-child(2n) {
   margin-right: 0;
   float: right;
 }
-.page.blog .page-content .part:nth-child(3n + 1) {
+.page.blog .content .content-inner .page-content .main .part:nth-child(2n + 1) {
   clear: both;
 }
-.page.blog .page-content .part .part-rear {
+.page.blog .content .content-inner .page-content .main .part .part-rear {
+  position: relative;
+  margin: 0 auto;
+  background: #033d69;
+  width: 380px;
+  height: 370px;
+  margin-bottom: 25px;
+}
+.page.blog .content .content-inner .page-content .main .part .part-rear .part-img {
+  width: 380px;
+  height: 280px;
+}
+.page.blog .content .content-inner .page-content .main .part .part-front {
   position: absolute;
   top: 0;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  width: 380px;
+  height: 280px;
+}
+.page.blog .content .content-inner .page-content .main .part .part-front .part-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
   width: 100%;
-  height: 240px;
-  z-index: 9;
-}
-.page.blog .page-content .part .part-rear .part-img {
-  width: 100%;
-  height: auto;
-}
-.page.blog .page-content .part .part-front {
-  position: relative;
-  width: 100%;
-  height: 240px;
-  z-index: 99;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border: 4px solid #033d69;
-}
-.page.blog .page-content .part .part-front:hover {
-  border-color: #3ca8f9;
-  text-decoration: none;
-}
-.page.blog .page-content .part .part-front .part-title {
-  color: #cdd000;
+  color: #033d69;
   padding: 10px 20px;
-  border-radius: 6px;
   background: rgba(255,255,255,0.9);
-  margin: 0;
 }
-.page.blog .page-content .part .part-intro {
-  width: 100%;
-  background: #033d69;
+.page.blog .content .content-inner .page-content .main .part .part-intro {
+  width: 380px;
   text-align: left;
   overflow: hidden;
-  bottom: 0;
-  left: 0;
   padding: 15px;
 }
-.page.blog .page-content .part .part-intro a.part-link {
+.page.blog .content .content-inner .page-content .main .part .part-intro a.part-link {
   font-size: 15px;
   line-height: 19px;
   font-weight: bold;
   color: #fff;
-  text-decoration: none;
 }
-@media only screen and (max-width: 800px) {
-  .page.blog .page-content .part {
+@media only screen and (max-width: 1200px) {
+  .page.blog .content .content-inner .page-content .main .part {
     width: calc(99.9% * 1/1 - (20px - 20px * 1/1));
-    height: auto;
   }
-  .page.blog .page-content .part:nth-child(1n) {
+  .page.blog .content .content-inner .page-content .main .part:nth-child(1n) {
     float: left;
     margin-right: 20px;
     clear: none;
   }
-  .page.blog .page-content .part:last-child {
+  .page.blog .content .content-inner .page-content .main .part:last-child {
     margin-right: 0;
   }
-  .page.blog .page-content .part:nth-child(1n) {
+  .page.blog .content .content-inner .page-content .main .part:nth-child(1n) {
     margin-right: 0;
     float: right;
   }
-  .page.blog .page-content .part:nth-child(1n + 1) {
+  .page.blog .content .content-inner .page-content .main .part:nth-child(1n + 1) {
     clear: both;
   }
-  .page.blog .page-content .part .part-rear,
-  .page.blog .page-content .part .part-front {
-    height: 200px;
+}
+@media only screen and (max-width: 800px) {
+  .page.blog .content .content-inner .page-content .main {
+    padding-top: 35px;
   }
-  .page.blog .page-content .part .part-intro {
-    height: auto;
+}
+@media only screen and (max-width: 400px) {
+  .page.blog .content .content-inner .page-content .main .part .part-rear {
+    width: 285px;
+    height: 300px;
+  }
+  .page.blog .content .content-inner .page-content .main .part .part-rear .part-img {
+    width: 285px;
+    height: 210px;
+  }
+  .page.blog .content .content-inner .page-content .main .part .part-front {
+    width: 285px;
+    height: 210px;
+  }
+  .page.blog .content .content-inner .page-content .main .part .part-intro {
+    width: 285px;
   }
 }
 .page.contato .page-content .main form .form-inner {
@@ -1279,50 +1334,40 @@ h5 {
     margin-top: 25px;
   }
 }
-.page-two-column .content,
-.post .content {
+.page-two-column .content {
   margin-bottom: 10px;
 }
-.page-two-column .content .content-inner,
-.post .content .content-inner {
+.page-two-column .content .content-inner {
   padding: 20px;
 }
-.page-two-column .content .content-inner .page-content:before,
-.post .content .content-inner .page-content:before {
+.page-two-column .content .content-inner .page-content:before {
   content: '';
   display: table;
 }
-.page-two-column .content .content-inner .page-content:after,
-.post .content .content-inner .page-content:after {
+.page-two-column .content .content-inner .page-content:after {
   content: '';
   display: table;
   clear: both;
 }
-.page-two-column .content .content-inner .page-content .sidebar,
-.post .content .content-inner .page-content .sidebar {
+.page-two-column .content .content-inner .page-content .sidebar {
   width: calc(99.9% * 4/14 - (20px - 20px * 4/14));
 }
-.page-two-column .content .content-inner .page-content .sidebar:nth-child(1n),
-.post .content .content-inner .page-content .sidebar:nth-child(1n) {
+.page-two-column .content .content-inner .page-content .sidebar:nth-child(1n) {
   float: left;
   margin-right: 20px;
   clear: none;
 }
-.page-two-column .content .content-inner .page-content .sidebar:last-child,
-.post .content .content-inner .page-content .sidebar:last-child {
+.page-two-column .content .content-inner .page-content .sidebar:last-child {
   margin-right: 0;
 }
-.page-two-column .content .content-inner .page-content .sidebar:nth-child(2n),
-.post .content .content-inner .page-content .sidebar:nth-child(2n) {
+.page-two-column .content .content-inner .page-content .sidebar:nth-child(2n) {
   margin-right: 0;
   float: right;
 }
-.page-two-column .content .content-inner .page-content .sidebar:nth-child(2n + 1),
-.post .content .content-inner .page-content .sidebar:nth-child(2n + 1) {
+.page-two-column .content .content-inner .page-content .sidebar:nth-child(2n + 1) {
   clear: both;
 }
-.page-two-column .content .content-inner .page-content .main,
-.post .content .content-inner .page-content .main {
+.page-two-column .content .content-inner .page-content .main {
   width: calc(99.9% * 10/14 - (20px - 20px * 10/14));
   overflow: hidden;
   background: #fff;
@@ -1330,40 +1375,33 @@ h5 {
   box-shadow: 0 0 1px 0 rgba(3,61,105,0.5);
   margin-bottom: 20px;
 }
-.page-two-column .content .content-inner .page-content .main:nth-child(1n),
-.post .content .content-inner .page-content .main:nth-child(1n) {
+.page-two-column .content .content-inner .page-content .main:nth-child(1n) {
   float: left;
   margin-right: 20px;
   clear: none;
 }
-.page-two-column .content .content-inner .page-content .main:last-child,
-.post .content .content-inner .page-content .main:last-child {
+.page-two-column .content .content-inner .page-content .main:last-child {
   margin-right: 0;
 }
-.page-two-column .content .content-inner .page-content .main:nth-child(2n),
-.post .content .content-inner .page-content .main:nth-child(2n) {
+.page-two-column .content .content-inner .page-content .main:nth-child(2n) {
   margin-right: 0;
   float: right;
 }
-.page-two-column .content .content-inner .page-content .main:nth-child(2n + 1),
-.post .content .content-inner .page-content .main:nth-child(2n + 1) {
+.page-two-column .content .content-inner .page-content .main:nth-child(2n + 1) {
   clear: both;
 }
-.page-two-column .content .content-inner .page-content .main .part-header .part-img,
-.post .content .content-inner .page-content .main .part-header .part-img {
+.page-two-column .content .content-inner .page-content .main .part-header .part-img {
   position: relative;
   overflow: hidden;
   width: 100%;
   height: 300px;
   margin-bottom: 15px;
 }
-.page-two-column .content .content-inner .page-content .main .part-header .part-img img,
-.post .content .content-inner .page-content .main .part-header .part-img img {
+.page-two-column .content .content-inner .page-content .main .part-header .part-img img {
   width: 100%;
   height: auto;
 }
-.page-two-column .content .content-inner .page-content .main .part-header .part-img .part-subtitle,
-.post .content .content-inner .page-content .main .part-header .part-img .part-subtitle {
+.page-two-column .content .content-inner .page-content .main .part-header .part-img .part-subtitle {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -1373,31 +1411,26 @@ h5 {
   padding: 8px 13px;
   z-index: 9;
 }
-.page-two-column .content .content-inner .page-content .main .part-content,
-.post .content .content-inner .page-content .main .part-content {
+.page-two-column .content .content-inner .page-content .main .part-content {
   overflow: hidden;
   background: #fff;
 }
-.page-two-column .content .content-inner .page-content .main .part-content:before,
-.post .content .content-inner .page-content .main .part-content:before {
+.page-two-column .content .content-inner .page-content .main .part-content:before {
   content: '';
   display: table;
 }
-.page-two-column .content .content-inner .page-content .main .part-content:after,
-.post .content .content-inner .page-content .main .part-content:after {
+.page-two-column .content .content-inner .page-content .main .part-content:after {
   content: '';
   display: table;
   clear: both;
 }
-.page-two-column .content .content-inner .page-content .main .part-content .part-title,
-.post .content .content-inner .page-content .main .part-content .part-title {
+.page-two-column .content .content-inner .page-content .main .part-content .part-title {
   text-align: left;
   margin: 20px 0 15px;
   padding-bottom: 15px;
   border-bottom: 2px solid #cdd000;
 }
-.page-two-column .content .content-inner .page-content .main .part-content .part-title i.fa,
-.post .content .content-inner .page-content .main .part-content .part-title i.fa {
+.page-two-column .content .content-inner .page-content .main .part-content .part-title i.fa {
   color: #cdd000;
   margin-right: 5px;
 }
@@ -1598,6 +1631,68 @@ h5 {
 }
 @media only screen and (max-width: 340px) {
   .intro-page .intro-page-inner .intro-page-description {
+    margin-top: 10px;
+    line-height: 20px;
+  }
+}
+.intro-post {
+  padding-top: 64px;
+  overflow: hidden;
+}
+.intro-post .intro-post-img {
+  position: absolute;
+  width: 100%;
+}
+.intro-post .intro-post-img img,
+.intro-style {
+  display: block;
+  width: 100%;
+  height: 210px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.intro-post .intro-post-inner {
+  height: 210px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.intro-post .intro-post-inner .intro-post-title,
+.intro-post .intro-post-inner .intro-post-description {
+  position: relative;
+  color: #fff;
+  margin: 0;
+}
+.intro-post .intro-post-inner .intro-post-title {
+  font-size: 50px;
+  line-height: 48px;
+  font-weight: 700;
+}
+.intro-post .intro-post-inner .intro-post-description {
+  font-size: 18px;
+}
+.intro-style {
+  position: absolute;
+  background: rgba(3,61,105,0.8);
+}
+@media only screen and (max-width: 1230px) {
+  .intro-post .intro-post-inner {
+    text-align: center;
+  }
+  .intro-post .intro-post-inner .intro-post-title {
+    font-size: 50px;
+    line-height: 44px;
+  }
+}
+@media only screen and (max-width: 340px) {
+  .intro-post .intro-post-inner .intro-post-description {
     margin-top: 10px;
     line-height: 20px;
   }
