--- a/_src/styl/pages/_page-area-mob.styl
+++ b/_src/styl/pages/_page-area-mob.styl
@@ -1,8 +1,11 @@
 .page.area
     +below(800px)
         .page-content
-            .part.part-img
+            .main
                 .part-content
                     img
                         width auto
                         height 100px
+                    .part-content-inner
+                        li
+                            lost-column 1/1 1
