--- a/_src/styl/pages/page-area.styl
+++ b/_src/styl/pages/page-area.styl
@@ -4,3 +4,7 @@
             .part-content
                 .part-content-inner
                     margin-bottom 20px
+                    li
+                        lost-column 1/3 3
+                        list-style: disc
+                        list-style-position inside
