--- a/_includes/parts/slice-price-table.html
+++ b/_includes/parts/slice-price-table.html
@@ -9,7 +9,7 @@
 					<ul class="price">
 						<li class="price-velocidade {{ post.tipo | slugify }}">{{ post.velocidade }}<p>MEGA</p></li>
 						<li class="price-field"><small>DOWNLOAD</small> {{ post.velocidade }} Mbps</li>
-						<li class="price-field"><small>UPLOAD</small> {{ post.upload }} Mbps</li>
+						<li class="price-field"><small>R$</small> {{ post.price }}</li>
 						<li class="price-field"><small>CONEXÃO</small> {{ post.tipo }}</li>
 						<li class="price-btn"><a class="btn btn-default btn-s" href="/planos.html"><i class="fa fa-plus"></i>  Saiba Mais</a></li>
 					</ul>
