--- a/_src/styl/pages/page-contato.styl
+++ b/_src/styl/pages/page-contato.styl
@@ -1,6 +1,28 @@
 .page.contato
     .page-content
         .main
+            .part-phone, .part-whatsapp
+                display flex
+                align-items center
+                justify-content center
+                color white
+                border 4px solid cinza
+                font-weight: bold
+                border-radius radius
+                padding: 20px
+                background: colors
+                font-size: 28px
+                p
+                    margin 0
+                    text-align: center            
+                i.fa
+                    font-size: 30px
+                    margin-right: 10px
+            .part-whatsapp
+                background: #72D76C
+                height 80px
+                small
+                    margin-right: 10px
             form
                 .form-inner
                     lost-utility clearfix
