--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,9 @@
 
 	<noscript>Desculpe, seu  browser não suporta JavaScript!</noscript>
 
+	<!-- OpenGraph -->
+	<meta property=”og:title” content=”O Uso do Facebook Open Graph”/>
+
 	<!-- Styles -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="{{ '/assets/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" />
