--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 	<noscript>Desculpe, seu  browser não suporta JavaScript!</noscript>
 
 	<!-- OpenGraph -->
-	<meta property=”og:title” content=”O Uso do Facebook Open Graph”/>
+	<meta property="og:title" content="O Uso do Facebook Open Graph" />
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
