--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,9 @@
 	<noscript>Desculpe, seu  browser não suporta JavaScript!</noscript>
 
 	<!-- OpenGraph -->
-	<meta property="og:title" content="O Uso do Facebook Open Graph" />
-	
+	<meta property="og:title" content="Rede Telenew - Provedor de Internet em Mauá" />
+	<meta property= "og:image" content="{{ '/assets/img/logo-s.png' | prepend: site.baseurl | prepend: site.url }}" />
+
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
