--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,9 @@
 	<noscript>Desculpe, seu  browser não suporta JavaScript!</noscript>
 
 	<!-- OpenGraph -->
-	<meta property="og:title" content="Rede Telenew - Provedor de Internet em Mauá" />
-	<meta property= "og:image" content="{{ '/assets/img/logo-s.png' | prepend: site.baseurl | prepend: site.url }}" />
+	<meta property="og:title" content="Olá, somos a Rede Telenew" />
+	<meta property="og:image" content="{{ '/assets/img/logo-s.png' | prepend: site.baseurl | prepend: site.url }}" />
+	<meta property="og:description" content="Fique conectado o tempo todo, com mega velocidade e tecnologia de ponta." />
 
 
 	<!-- Styles -->
