--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,4 +34,6 @@
 	<link rel="manifest" href="{{ '/assets/favicon/manifest.json' | prepend: site.baseurl | prepend: site.url }}" />
 	<link rel="mask-icon" href="{{ '/assets/favicon/safari-pinned-tab.svg' | prepend: site.baseurl | prepend: site.url }}" color="#5bbad5" />
 	<!-- <meta name="theme-color" content="#F66B0B" /> -->
+
+	<script src="https://use.fontawesome.com/197c161481.js"></script>
 </head>
