--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="footer-facebook">
                     <p class="facebook-txt">Siga-nos</p>
-                    <a class="facebook-link" href="https://www.facebook.com/{{ site.face_username }}" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                    <a class="facebook-link" href="https://www.facebook.com/{{ site.facebook_user }}" target="_blank"><i class="fa fa-facebook-square"></i></a>
                 </div>
             </div>
         </div>
@@ -37,6 +37,6 @@
     </div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="{{ "/assets/js/third.js?v=@version@" | prepend: site.baseurl }}"></script>
-<script src="{{ "/assets/js/script.js?v=@version@" | prepend: site.baseurl }}"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+<script src="{{ "/assets/js/third.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/script.js" | prepend: site.baseurl }}"></script>
