--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,39 +1,67 @@
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-	<title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }} - {{ site.description }}{% endif %}</title>
-	<!-- <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title> -->
-	<meta name="description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+    <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }} - {{ site.description }}{% endif %}</title>
+    <meta name="description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
 
-	<noscript>Desculpe, seu  browser não suporta JavaScript!</noscript>
+    <noscript>Desculpe, seu  browser não suporta JavaScript!</noscript>
 
-	<!-- OpenGraph -->
-	<meta property="og:title" content="Olá, somos a Rede Telenew" />
-	<meta property="og:image" content="{{ '/assets/img/logo-s.png' | prepend: site.baseurl | prepend: site.url }}" />
-	<meta property="og:description" content="Fique conectado o tempo todo, com mega velocidade e tecnologia de ponta." />
+    <!-- OpenGraph -->
+    {% if page.layout == 'layout-post' %}
+        <meta property="og:title" content="{{ page.title }}">
+    {% else %}
+        <meta property="og:title" content="{{ site.header_title }}" />
+    {% endif %}    
+    {% if page.layout == 'layout-post' %}
+        <meta property="og:type" content="article">
+    {% else %}
+        <meta property="og:type" content="website">
+    {% endif %}
+    <meta property="og:url" content="{{ page.url | prepend: site.baseurl | prepend: site.url }}">
+    <meta property="og:image" content="{{ '/assets/img/logo-s.png' | prepend: site.baseurl | prepend: site.url }}" />
+    {% if page.layout == 'layout-post' %}
+        <meta property="og:description" content="{{ page.intro }}" />
+    {% else %}
+        <meta property="og:description" content="{{ site.header_description }}" />
+    {% endif %}    
+    
+    <!-- TwitterCard -->
+    {% if page.layout == 'layout-post' %}
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="{{ site.twitter_user }}">
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:description" content="{{ page.intro }}">
+    {% endif %}
+    
+    <!-- Google Plus Publisher -->
+    {% if page.layout == 'layout-post' %}
+    {% assign author = site.data.authors[page.author] %}
+    <link rel="publisher" href="https://plus.google.com/{{ author.googleplus }}">
+    {% endif %}
 
+    <!-- Styles -->
+<!-- <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
+<!-- <link rel="stylesheet" href="{{ '/bootstrap/css/bootstrap.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
+<!-- <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800' />
+    <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
+    <link rel="stylesheet" href="{{ '/assets/css/third.css' | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | prepend: site.baseurl | prepend: site.url }}" />
 
-	<!-- Styles -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="{{ '/assets/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" />
-	<link rel="stylesheet" href="{{ '/assets/css/third.css' | prepend: site.baseurl | prepend: site.url }}" />
-	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=@version@' | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="alternate" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" hreflang="pt-br" />
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+    <meta name="google-site-verification" content="{{ site.search_console }}" />
+    <meta name="msvalidate.01" content="{{ site.bing_webmaster }}" />
 
-	<link rel="alternate" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" hreflang="pt-br" />
-	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
-	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+    <!-- Scripts -->
+    <script src="https://use.fontawesome.com/197c161481.js"></script>
 
-	<meta name="google-site-verification" content="{{ site.search_console }}" />
-
-	<!-- Favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png' | prepend: site.baseurl | prepend: site.url }}" />
-	<link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-32x32.png' | prepend: site.baseurl | prepend: site.url }}" sizes="32x32" />
-	<link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-16x16.png' | prepend: site.baseurl | prepend: site.url }}" sizes="16x16" />
-	<link rel="manifest" href="{{ '/assets/favicon/manifest.json' | prepend: site.baseurl | prepend: site.url }}" />
-	<link rel="mask-icon" href="{{ '/assets/favicon/safari-pinned-tab.svg' | prepend: site.baseurl | prepend: site.url }}" color="#5bbad5" />
-	<!-- <meta name="theme-color" content="#F66B0B" /> -->
-
-	<script src="https://use.fontawesome.com/197c161481.js"></script>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png' | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-32x32.png' | prepend: site.baseurl | prepend: site.url }}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-16x16.png' | prepend: site.baseurl | prepend: site.url }}" sizes="16x16" />
+    <link rel="manifest" href="{{ '/assets/favicon/manifest.json' | prepend: site.baseurl | prepend: site.url }}" />
 </head>
