--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,7 +33,7 @@
     </div>
     {% endfor %}
     <div class="sidebar-item sidebar-facebook">
-        <div class="fb-page" data-href="https://www.facebook.com/{{ site.face_username }}/" data-width="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/{{ site.face_username }}/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/{{ site.face_username }}/">{{ site.face_username }}</a></blockquote>
+        <div class="fb-page" data-href="https://www.facebook.com/{{ site.facebook_user }}/" data-width="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/{{ site.facebook_user }}/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/{{ site.facebook_user }}/">{{ site.facebook_user }}</a></blockquote>
         </div>
     </div>
 </div>
