--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,9 +42,9 @@
     {% endif %}
 
     <!-- Styles -->
-<!-- <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
-<!-- <link rel="stylesheet" href="{{ '/bootstrap/css/bootstrap.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
-<!-- <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
+<!-- <!-- <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" /> --> -->
+<!-- <!-- <link rel="stylesheet" href="{{ '/bootstrap/css/bootstrap.css' | prepend: site.baseurl | prepend: site.url }}" /> --> -->
+<!-- <!-- <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}" /> --> -->
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800' />
     <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
     <link rel="stylesheet" href="{{ '/assets/css/third.css' | prepend: site.baseurl | prepend: site.url }}" />
