--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }} - {{ site.description }}{% endif %}</title>
     <meta name="description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
-
-    <noscript>Desculpe, seu  browser não suporta JavaScript!</noscript>
 
     <!-- OpenGraph -->
     {% if page.layout == 'layout-post' %}
@@ -42,9 +40,9 @@
     {% endif %}
 
     <!-- Styles -->
-<!-- <!-- <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" /> --> -->
-<!-- <!-- <link rel="stylesheet" href="{{ '/bootstrap/css/bootstrap.css' | prepend: site.baseurl | prepend: site.url }}" /> --> -->
-<!-- <!-- <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}" /> --> -->
+<!-- <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
+<!-- <link rel="stylesheet" href="{{ '/bootstrap/css/bootstrap.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
+<!-- <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800' />
     <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
     <link rel="stylesheet" href="{{ '/assets/css/third.css' | prepend: site.baseurl | prepend: site.url }}" />
