--- a/_src/styl/globals/post.styl
+++ b/_src/styl/globals/post.styl
@@ -32,12 +32,55 @@
                             img
                                 width 100%
                                 height auto
-                    .part-content
-                        overflow: hidden
-                        background: white
-                        lost-utility clearfix
-                        li
-                            padding-left: 1em 
-                            text-indent: -.7em
-                            p::before
-                              content: "• "
+                .part-content
+                    overflow: hidden
+                    background: white
+                    lost-utility clearfix
+                    .page-author
+                        width 100%
+                        height 22px
+                        margin 20px 0
+                        .author-label
+                            display inline-block
+                            color white
+                            float right
+                            margin-left: 5px
+                            height 22px
+                            overflow: hidden
+                            i, a
+                                display inline-block
+                                line-height: 22px
+                                padding 0 5px
+                                font-size: 13px
+                            i
+                                border-radius radius 0 0 radius
+                                background: colors
+                            a
+                                color white
+                                background: colors + 10%
+                                border-radius 0 radius radius 0                                  
+                        .author-name
+                            i
+                                background: colors
+                            a
+                                background: colors + 10%
+                        .author-facebook
+                            i
+                                background: #3B5998
+                            a
+                                background: #3B5998 + 10%
+                        .author-twitter
+                            i
+                                background: #198ED6
+                            a
+                                background: #198ED6 + 10%
+                        .author-googleplus
+                            i
+                                background: #db4437
+                            a
+                                background: #db4437 + 10%
+                    li
+                        padding-left: 1em 
+                        text-indent: -.7em
+                        p::before
+                          content: "• "
