--- a/_includes/parts/cards.html
+++ b/_includes/parts/cards.html
@@ -7,7 +7,7 @@
 				<h2 class="cards-title">{{ post.title }}</h2>
 			</div>
 			<div class="cards-content-group">
-				<p>{{ post.excerpt }}</p>
+				{{ post.excerpt }}
 			</div>
 			<div class="cards-btn-group">
 				{% if post.link %}
