--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,10 @@
                             {% else %}
                                 <li>
                                     <a href="{{ top_item.top_url }}">{{ top_item.top_title }}</a>
-                                </li>                            
+                                </li>
                             {% endif %}
                         {% endfor %}
-                    </ul>               
+                    </ul>
                 </div>
                 <div class="footer-facebook">
                     <p class="facebook-txt">Siga-nos</p>
@@ -36,7 +36,7 @@
         </div>
     </div>
 </footer>
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="{{ "/assets/js/third.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/script.js" | prepend: site.baseurl }}"></script>
