--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
         <meta property="og:title" content="{{ page.title }}">
     {% else %}
         <meta property="og:title" content="{{ site.header_title }}" />
-    {% endif %}    
+    {% endif %}
     {% if page.layout == 'layout-post' %}
         <meta property="og:type" content="article">
     {% else %}
@@ -23,8 +23,8 @@
         <meta property="og:description" content="{{ page.intro }}" />
     {% else %}
         <meta property="og:description" content="{{ site.header_description }}" />
-    {% endif %}    
-    
+    {% endif %}
+
     <!-- TwitterCard -->
     {% if page.layout == 'layout-post' %}
     <meta name="twitter:card" content="summary">
@@ -32,7 +32,7 @@
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{{ page.intro }}">
     {% endif %}
-    
+
     <!-- Google Plus Publisher -->
     {% if page.layout == 'layout-post' %}
     {% assign author = site.data.authors[page.author] %}
@@ -40,9 +40,8 @@
     {% endif %}
 
     <!-- Styles -->
-<!-- <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
-<!-- <link rel="stylesheet" href="{{ '/bootstrap/css/bootstrap.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
-<!-- <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}" /> -->
+    <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.baseurl | prepend: site.url }}" />
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800' />
     <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
     <link rel="stylesheet" href="{{ '/assets/css/third.css' | prepend: site.baseurl | prepend: site.url }}" />
