--- a/_includes/parts/intro-home.html
+++ b/_includes/parts/intro-home.html
@@ -1,15 +1,17 @@
 <section class="intro-home">
-	<div class="intro-home-inner">
+    <div class="intro-home-inner">
         <h2 class="intro-home-title">{{ site.header_title }}</h2>
-		<p class="intro-home-description">{{ site.header_description }}</p>
-	</div>
+        <p class="intro-home-description">{{ site.header_description }}</p>
+    </div>
     <span class='button-arrow'>
     </span>
 </section>
 <div class="intro-bottom">
     <div class="intro-bottom-inner center">
-        <h5 class='intro-bottom-item intro-bottom-title'>lorem ipsum</h5>
-        <p class='intro-bottom-item intro-bottom-txt'>foo bar</p>
-        <a class='btn btn-lg btn-q' href="/contato">Solicite agora!</a>
+        <span class='intro-bottom-item-w'>
+            <h5 class='intro-bottom-item intro-bottom-title'>Banda Larga Otimatech</h5>
+            <p class='intro-bottom-item intro-bottom-txt'>A melhor maneira de se conectar ao mundo.</p>
+        </span>
+        <a class='btn btn-lg btn-s' href="/contato">Solicite agora!</a>
     </div>
 </div>
