--- a/_src/styl/parts/intro-home.styl
+++ b/_src/styl/parts/intro-home.styl
@@ -33,10 +33,21 @@
     background: colorp
     padding 30px 0
     .intro-bottom-inner
+        display flex
+        align-items center
         .intro-bottom-item
-            display: inline-block
             color white
+            margin 0
         .btn
-            float right
+            margin-left: auto
+            text-transform: uppercase
+            font-weight: bold
+        .intro-bottom-item-w
+            .intro-bottom-title
+                font-size: 40px
+                font-weight: bold
+            .intro-bottom-txt
+                font-size: 20px
+                font-weight 200
 
 
