--- a/_includes/parts/intro-home.html
+++ b/_includes/parts/intro-home.html
@@ -12,6 +12,6 @@
             <h5 class='intro-bottom-item intro-bottom-title'>Banda Larga Otimatech</h5>
             <p class='intro-bottom-item intro-bottom-txt'>A melhor maneira de se conectar ao mundo.</p>
         </span>
-        <a class='btn btn-lg btn-s' href="/contato">Solicite agora!</a>
+        <a class='btn btn-lg btn-q' href="/contato">Solicite agora!</a>
     </div>
 </div>
