--- a/_src/styl/parts/_intro-home-mob.styl
+++ b/_src/styl/parts/_intro-home-mob.styl
@@ -2,7 +2,7 @@
     +below(break-nav)
         .intro-home-inner
             padding 0 15px
-    +below(340px)
+    +below(380px)
         .intro-home-inner
             .intro-home-title
                 font-size: 50px
@@ -10,4 +10,14 @@
             .intro-home-description
                 line-height: 30px
 
-                
+.intro-bottom
+    +below(break-nav)
+        .intro-bottom-inner
+            flex-direction column
+            .intro-bottom-item
+                text-align center
+            .btn
+                width 80%
+                margin-top: 15px
+                margin-right auto
+                margin-left: auto
