--- a/_src/styl/parts/intro-home.styl
+++ b/_src/styl/parts/intro-home.styl
@@ -35,6 +35,7 @@
     .intro-bottom-inner
         display flex
         align-items center
+        padding 0 15px
         .intro-bottom-item
             color white
             margin 0
