--- a/_src/styl/parts/_slice-price-table-mob.styl
+++ b/_src/styl/parts/_slice-price-table-mob.styl
@@ -1,6 +1,10 @@
 .slice.price-table
     +below(1000px)
         .price-table-main
-            lost-center 200px
-            ul.price
-                lost-column 1/1 1
+            .table-price
+                lost-utility clearfix
+                lost-center 300px
+                padding 0
+                .item
+                    lost-column 1/1 1
+                    margin-bottom: 60px
