--- a/_src/styl/parts/intro-home.styl
+++ b/_src/styl/parts/intro-home.styl
@@ -1,6 +1,6 @@
 .intro-home
     position: relative
-    height 80vh
+    height 600px
     background-image url("/assets/img/site-background.jpg")
     background-attachment fixed
     background-size cover
@@ -12,7 +12,7 @@
         text-align center
         justify-content center
         width 100%
-        height 80vh
+        height 600px
         color white
         text-shadow -1px -1px 4px rgba(0,0,0,.7)
         .intro-home-title
