--- a/_src/styl/parts/slice-price-table.styl
+++ b/_src/styl/parts/slice-price-table.styl
@@ -1,49 +1,48 @@
 .slice.price-table
     .price-table-main
-        .carousel-price
-            lost-center 1000px
-            height 323px
+        padding-top: 40px
+        .table-price
+            padding 0 140px
             .item
+                lost-column 1/3 3
                 ul.price
                     background: white
-                    padding 0 0 20px
+                    padding 0 0 40px
+                    text-align: center
                     li.price-field
-                        text-align: center
                         color texts
                         font-size: 16px
-                        border-bottom 3px solid cinza
+                        border-bottom 1px solid colors
                         margin 10px 20px
                         padding 7px 0
                         small
                             font-size: 11px
                     li.price-btn
                         text-align: center
-                    li.price-velocidade.fibra
-                        background: #87CDD2
-                        p
-                            border-top 1px solid #87CDD2 + 20%
-                        &:after
-                            border-top 12px solid #87CDD2
+                        margin-top: 40px
                     li.price-velocidade
+                        display flex
+                        flex-direction column
+                        justify-content center
+                        align-items center
                         position: relative
                         text-align: center
-                        background: #EB5E50
-                        font-weight: bold
-                        font-size: 34px
-                        padding 5px 20px
-                        margin-bottom: 10px
-                        p
-                            padding-top: 10px
-                            font-size: 18px
-                            border-top 2px solid #EB5E50 + 30%                    
-                        &:after
-                            border-top 12px solid #EB5E50
-                            border-left 20px solid transparent
-                            border-right 20px solid transparent
-                            bottom -11px
-                            content ""
-                            position absolute
-                            left 50%
-                            margin-left -20px
-                            width 0
-                            height 0
+                        background: colors
+                        color white
+                        font-size: 16px
+                        font-weight: 200
+                        width 100px
+                        height 100px
+                        border-radius 50%
+                        border 6px solid white
+                        margin 0 auto
+                        top -50px
+                        padding-bottom: 5px
+                        .price-number, .price-mega
+                            display: block
+                            width 100px
+                            line-height: 20px
+                        .price-number
+                            font-size: 26px
+                    ul
+                        margin-top: -40px
