--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,16 +40,16 @@
     {% endif %}
 
     <!-- Styles -->
-    <link rel="stylesheet" href="{{ '/fonts/fonts.css' | prepend: site.url }}" />
-    <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' | prepend: site.url }}" />
+    <link rel="stylesheet" href="{{ '/fonts/fonts.css' }}" />
+    <link rel="stylesheet" href="{{ '/fontawesome/css/font-awesome.min.css' }}" />
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800' />
     <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
-    <link rel="stylesheet" href="{{ '/assets/css/third.css' | prepend: site.url }}" />
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | prepend: site.url }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/third.css' }}" />
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' }}" />
 
-    <link rel="alternate" href="{{ page.url | replace:'index.html','' | prepend: site.url }}" hreflang="pt-br" />
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
+    <link rel="alternate" href="{{ page.url | replace:'index.html','' }}" hreflang="pt-br" />
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' }}" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" }}" />
     <meta name="google-site-verification" content="{{ site.search_console }}" />
     <meta name="msvalidate.01" content="{{ site.bing_webmaster }}" />
 
@@ -57,8 +57,8 @@
     <script src="https://use.fontawesome.com/197c161481.js"></script>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png' | prepend: site.url }}" />
-    <link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-32x32.png' | prepend: site.url }}" sizes="32x32" />
-    <link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-16x16.png' | prepend: site.url }}" sizes="16x16" />
-    <link rel="manifest" href="{{ '/assets/favicon/manifest.json' | prepend: site.url }}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicon/apple-touch-icon.png' }}" />
+    <link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-32x32.png' }}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{ '/assets/favicon/favicon-16x16.png' }}" sizes="16x16" />
+    <link rel="manifest" href="{{ '/assets/favicon/manifest.json' }}" />
 </head>
