--- a/_includes/parts/slice-cards.html
+++ b/_includes/parts/slice-cards.html
@@ -1,4 +1,4 @@
-<section class="cards-group">
+<section class="slice cards-group">
 	<ul class="cards center">
 		{% for post in site.tags.card limit:3  %}
 		<li class="cards-inner">
@@ -18,5 +18,5 @@
 			</div>
 		</li>
 		{% endfor %}
-	</ul>	
+	</ul>
 </section>
