--- a/_src/styl/parts/cards.styl
+++ b/_src/styl/parts/cards.styl
@@ -35,6 +35,8 @@
 				height 205px
 				margin 0 0 15px 0
 				overflow hidden
+				p
+					color colors - 30%
 			.cards-saibamais
 				color white
 				text-transform: uppercase
