--- a/_includes/parts/slice-price-table.html
+++ b/_includes/parts/slice-price-table.html
@@ -9,7 +9,7 @@
 					<ul class="price">
 						<li class="price-velocidade {{ post.tipo | slugify }}">
 							<span class="price-number">{{ post.velocidade }}</span>
-							<span class="price-mega">Mega</span>
+							<span class="price-mega">MBps</span>
 						</li>
 						<ul>
 							<li class="price-field"><small>DOWNLOAD</small> {{ post.velocidade }} Mbps</li>
